<resources>
    <string name="app_name">GoScanner</string>
    <string name="crate_qrcode">create</string>
    <string name="record">record</string>
    <string name="scan">scan</string>
    <string name="collection">Collection</string>
    <string name="recording">Recording</string>
    <string name="bussiness_card">Business Card</string>
    <string name="web_page">Web page</string>
    <string name="text_content">Text content</string>
    <string name="other">Other</string>
    <string name="remarks">Remarks</string>
    <string name="paste">Paste</string>
    <string name="you_name">You name</string>
    <string name="generate">generate</string>
    <string name="save_qr_code">Save QR Code</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="new_contact">New Contacat</string>
    <string name="update_contact">Update Contact</string>
    <string name="contact">Contact</string>
    <string name="card">Card</string>
    <string name="phone">Phone:</string>
    <string name="email">Emial:</string>
    <string name="wechat">WeChat:</string>
    <string name="address">Address:</string>
    <string name="copy">Copy</string>
</resources>
