<LinearLayout android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_background"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_person_img"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/card_name"
                android:textSize="16dp"
                android:text="name"
                android:lines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/card_remarks"
                android:textSize="16dp"
                android:text="remark"
                android:lines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999999" />
        </LinearLayout>

        <ImageView
            android:id="@+id/card_qrcode"
            android:layout_width="24dp"
            android:layout_height="24dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/card_phone_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/phone"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/card_phone"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/card_email_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/email"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/card_email"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/card_wechat_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/wechat"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/card_wechat"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/card_address_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/address"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/card_address"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/card_copy_button"
        android:layout_marginTop="12dp"
        android:textSize="16dp"
        android:text="@string/copy"
        android:background="@drawable/card_copy_background"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:textColor="#ffffff" />
</LinearLayout>